--- a/_config.yml
+++ b/_config.yml
@@ -53,12 +53,12 @@ cover_color:
 
 # The blog button should not be removed.
 blog_button:
-    title: 博客主页
+    title: 博客
 
 # Navigation buttons in the front page.s
 nav:
-    - {title: 所有文章, description: archive, url: '/archive'}   
-    - {title: 标签, description: tags, url: '/tags'}  
+    # - {title: 所有文章, description: archive, url: '/archive'}   
+    # - {title: 标签, description: tags, url: '/tags'}  
     - {title: 项目, description: project, url: '/project'}    
     - {title: 关于我, description: about, url: '/about'}          
 
